--- a/indexp2.html
+++ b/indexp2.html
@@ -111,12 +111,12 @@ body {
 
   	<div class="dropdown_content">
 
-  		<input type="checkbox" id="c1" name="c1" value="Bike">
-  		<label for="vehicle1"> Lee County </label><br>
-  		<input type="checkbox" id="c2" name="c2" value="Car">
-  		<label for="vehicle2"> Collier County </label><br>
- 		 <input type="checkbox" id="c3" name="c3" value="Boat">
-  		<label for="vehicle3"> Sarasota County </label>
+  		<input type="checkbox" id="c1" name="c1" value="county1">
+  		<label for="county1"> Lee County </label><br>
+  		<input type="checkbox" id="c2" name="c2" value="County2">
+  		<label for="county2"> Collier County </label><br>
+ 		 <input type="checkbox" id="c3" name="c3" value="county3">
+  		<label for="county3"> Broward County </label>
 	
 		</form>
 
